2007-03-27T07:56	C.J. Adams-Collier <cjac@colliertech.org>
	* src/data/autotools.xml
	! <ProjectConfigureAc />
	- cleaned up duplicate checks
	- placed initialization macros above system check macros
	- added some more messages about what's going on
	- added GACUTIL_FLAGS variable including /package option
	! <ProjectMakefileAm />
	- added an incomplete bin_SCRIPTS
	- RCS check says "building" instead of "compiling"
	! <SolutionConfigureAc />
	- removed macros that are useful only for projects
	! <ProjectWrapperScriptIn />
	- created this element on this revision
	- this is a wrapper shell script that lives in the $PATH and runs
	  the CIL assembly

2007-03-26T20:18	C.J. Adams-Collier <cjac@colliertech.org>
	* src/Core/Targets/AutotoolsTarget.cs
	- creating new template arguments to contain the list of libs to
	  reference: source, binary & GAC
	- source libs are included as part of this solution (untested)
	- binary libs are distributed with the source (untested)
	- GAC libs are assumed to be in the GAC or other lib path (tested)
	* src/data/autotools.xml
	- created new params through which to accept reference info
	- created a working $(CSC) line
	- added a TODO item for ordering project dependency for
	  AC_CONFIG_SUBDIRS code

2007-03-26T08:41	C.J. Adams-Collier <cjac@colliertech.org>
	* src/Core/Targets/AutotoolsTarget.cs
	- now creating list of source files in managed code and passing
	  them to the template via <xsl:param>s
	* src/data/prebuild-1.7.xsd
	- updated the header comment to 2007
	* src/data/autotools.xml
	! <ProjectConfigureAc>
	- copied checks from Solution-level configure.ac
	- copied solution-level config status
	! <ProjectMakefileAm>
	- added <xsl:param> elements for file list to be passed through
	- made a temporary target for the assembly we're building
	- added this target to the deps of "all:"
	! <SolutionConfigureAc>
	- changed status header/footer from "- - -" to "==="

2007-03-23T08:33	C.J. Adams-Collier <cjac@colliertech.org>